--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,10 @@
 site_name: PowerShell Commands
 site_url: https://lifailon.github.io
+repo_url: https://github.com/Lifailon/PS-Commands
+copyright: Copyright © 2023-2024 Alex Kup (Lifailon)
+
 nav:
-  - PS-Commands: index.md
+  - Home: index.md
   - Syntax: Syntax\index.md
   - File System: FileSystem\index.md
   - Network: Network\index.md
@@ -22,24 +25,61 @@ nav:
   - Docker: Docker\index.md
   - Zabbix: Zabbix\index.md
   - DevOps: DevOps\index.md
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/Lifailon/PS-Commands
+      name: PS-Commands on Github
+
+  # alternate:
+  #   - name: Русский
+  #     link: .
+  #     lang: ru
+  #   - name: English
+  #     link: ./en/
+  #     lang: en
+
+# theme: readthedocs
+# theme: bootstrap4
+
 theme:
   name: material
+
+  logo: Logo/PS-Commands-logo-x256.png
+  favicon: Logo/PS-Commands-logo-x256.png
+
+  font:
+     text: Inter
+     code: Inter
+
   features:
     - content.code.copy
+  
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
+      primary: blue
+      accent: blue
       toggle:
         icon: material/brightness-4
-        name: Switch to system preference
+        name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default 
+      primary: blue
+      accent: blue
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
-#theme: readthedocs
-#theme: bootstrap4
+
 markdown_extensions:
   - markdown.extensions.nl2br
   - toc:
       permalink: true
+
+plugins:
+  - search
+
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/powershell.min.js
