update headers custom stype

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ plugins:
 extra_css:
   # https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/obsidian.min.css
   - assets/highlight/obsidian.min.css
+  - assets/custom/headers.css
 
 extra_javascript:
   # https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js
