--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,10 +21,33 @@ nav:
   - Markup Languages : MarkupLanguages/index.md
   - API: API/index.md
   - Zabbix: Zabbix/index.md
-  - 🐳 Docker: Docker/index.md
   - DevOps: DevOps/index.md
-  - 🐧 Linux: Linux/index.md
+  - Docker: Docker/index.md
+  - Linux: Linux/index.md
   - Node.js: Node.js/index.md
+
+# nav:
+#   - PowerShell:
+#     - Syntax: Syntax/index.md
+#     - Operating System: Windows/index.md
+#     - File System: FileSystem/index.md
+#     - Network: Network/index.md
+#     - Threads: Threads/index.md
+#     - Modules: Modules/index.md
+#     - .NET: dotNET/index.md
+#     - COM: COM/index.md
+#     - Server Manager: ServerManager/index.md
+#     - Active Directory: ActiveDirectory/index.md
+#     - Microsoft Exchange: Exchange/index.md
+#     - Virtualization: Virtualization/index.md
+#     - Database: Database/index.md
+#     - Markup Languages : MarkupLanguages/index.md
+#     - API: API/index.md
+#     - Zabbix: Zabbix/index.md
+#   - DevOps: DevOps/index.md
+#   - 🐳 Docker: Docker/index.md
+#   - 🐧 Linux: Linux/index.md
+#   - Node.js: Node.js/index.md
 
   # alternate:
   #   - name: Русский
