--- a/.github/workflows/build-zola.yml
+++ b/.github/workflows/build-zola.yml
@@ -4,8 +4,8 @@ on:
 #   push:
 #     branches:
 #       - main
-#   schedule:
-#     - cron: "00 * * * *"
+  schedule:
+    - cron: "0 23 * * 0"
   workflow_dispatch:
     inputs:
       message:
