--- a/.github/workflows/build-zola.yml
+++ b/.github/workflows/build-zola.yml
@@ -1,11 +1,11 @@
 name: Build and Deploy public files
 
 on:
-#   push:
-#     branches:
-#       - main
-  schedule:
-    - cron: "0 23 * * 0"
+  # push:
+  #   branches:
+  #     - main
+  # schedule:
+  #   - cron: "0 23 * * 0"
   workflow_dispatch:
     inputs:
       message:
