--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,53 +1,22 @@
-site_name: PowerShell Commands / RuDocs
+site_name: PowerShell Commands
 site_url: https://lifailon.github.io
 repo_url: https://github.com/Lifailon/PS-Commands
 copyright: Copyright © 2023-2024 Alex Kup (Lifailon)
 
-nav:
-  - Start: index.md
-  - PowerShell Syntax: Syntax/index.md
-  - Operating System: Windows/index.md
-  - File System: FileSystem/index.md
-  - Network: Network/index.md
-  - Threads: Threads/index.md
-  - Modules: Modules/index.md
-  - .NET: dotNET/index.md
-  - COM: COM/index.md
-  - Server Manager: ServerManager/index.md
-  - Active Directory: ActiveDirectory/index.md
-  - Microsoft Exchange: Exchange/index.md
-  - Virtualization: Virtualization/index.md
-  - Database: Database/index.md
-  - Markup Languages : MarkupLanguages/index.md
-  - API: API/index.md
-  - Zabbix: Zabbix/index.md
-  - DevOps: DevOps/index.md
-  - Docker: Docker/index.md
-  - Linux: Linux/index.md
-  - Node.js: Node.js/index.md
+docs_dir: content
 
-# nav:
-#   - PowerShell:
-#     - Syntax: Syntax/index.md
-#     - Operating System: Windows/index.md
-#     - File System: FileSystem/index.md
-#     - Network: Network/index.md
-#     - Threads: Threads/index.md
-#     - Modules: Modules/index.md
-#     - .NET: dotNET/index.md
-#     - COM: COM/index.md
-#     - Server Manager: ServerManager/index.md
-#     - Active Directory: ActiveDirectory/index.md
-#     - Microsoft Exchange: Exchange/index.md
-#     - Virtualization: Virtualization/index.md
-#     - Database: Database/index.md
-#     - Markup Languages : MarkupLanguages/index.md
-#     - API: API/index.md
-#     - Zabbix: Zabbix/index.md
-#   - DevOps: DevOps/index.md
-#   - 🐳 Docker: Docker/index.md
-#   - 🐧 Linux: Linux/index.md
-#   - Node.js: Node.js/index.md
+nav:
+  - Home: _index.md
+  - PowerShell: PowerShell/index.md
+  - Linux: Linux/index.md
+  - GoLang: GoLang/index.md
+  - Node.js: Node-js/index.md
+  - Docker: Docker/index.md
+  - Network: Network/index.md
+  - Windows Server: WindowsServer/index.md
+  - Database: Database/index.md
+  - API: api/index.md
+  - DevOps: DevOps/index.md
 
   # alternate:
   #   - name: Русский
@@ -69,8 +38,8 @@ extra:
 theme:
   name: material
 
-  logo: Logo/PowerShell-Logo.png
-  favicon: Logo/PowerShell-Logo.png
+  logo: assets/logo.png
+  favicon: assets/logo.png
 
   font:
     text: Inter
