--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -15,6 +15,10 @@ on:
         description: "Update DevOps Tools"
         default: false
         type: boolean
+      compose:
+        description: "Update Compose Stacks"
+        default: false
+        type: boolean
       golang:
         description: "Update GoLang Cheat Sheet"
         default: false
@@ -60,6 +64,13 @@ jobs:
           rm content/DevOps/index.md
           cp templates/devops.md content/DevOps/index.md
           cat PS-Commands/devops.md | sed -Ez "s/(.*\n)?---\n//" >> content/DevOps/index.md
+
+      - name: Update Compose Stacks
+        if: ${{ github.event.inputs.devops == 'true' }}
+        run: |
+          rm content/Compose/index.md
+          cp templates/compose.md content/Compose/index.md
+          cat PS-Commands/Docker-Compose/README.md | sed -Ez "s/(.*\n)?---\n//" >> content/Compose/index.md
 
       - name: Update GoLang Cheat Sheet
         if: ${{ github.event.inputs.golang == 'true' }}
