--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - PowerShell: PowerShell/index.md
   - Linux: Linux/index.md
   - DevOps: DevOps/index.md
+  - DevOps: Compose/index.md
   - GoLang: GoLang/index.md
   - Node.js: Node-js/index.md
 
