--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -36,9 +36,9 @@ jobs:
       - name: Copy current repository
         uses: actions/checkout@v4
 
-      - name: Clone PS-Commands repository
+      - name: Clone rudocs repository
         if: ${{ github.event.inputs.powershell == 'true' || github.event.inputs.linux == 'true' || github.event.inputs.devops == 'true' || github.event.inputs.compose == 'true' }}
-        run: git clone https://github.com/Lifailon/PS-Commands
+        run: git clone https://github.com/Lifailon/rudocs
 
       - name: Clone golang-cheat-sheet-ru repository
         if: ${{ github.event.inputs.golang == 'true' }}
@@ -49,28 +49,28 @@ jobs:
         run: |
           rm content/PowerShell/index.md
           cp templates/powershell.md content/PowerShell/index.md
-          cat PS-Commands/posh.md | sed -Ez "s/(.*\n)?---\n//" >> content/PowerShell/index.md
+          cat rudocs/posh.md | sed -Ez "s/(.*\n)?---\n//" >> content/PowerShell/index.md
 
       - name: Update Linux commands
         if: ${{ github.event.inputs.linux == 'true' }}
         run: |
           rm content/Linux/index.md
           cp templates/linux.md content/Linux/index.md
-          cat PS-Commands/linux.md | sed -Ez "s/(.*\n)?---\n//" >> content/Linux/index.md
+          cat rudocs/linux.md | sed -Ez "s/(.*\n)?---\n//" >> content/Linux/index.md
 
       - name: Update DevOps Tools
         if: ${{ github.event.inputs.devops == 'true' }}
         run: |
           rm content/DevOps/index.md
           cp templates/devops.md content/DevOps/index.md
-          cat PS-Commands/devops.md | sed -Ez "s/(.*\n)?---\n//" >> content/DevOps/index.md
+          cat rudocs/devops.md | sed -Ez "s/(.*\n)?---\n//" >> content/DevOps/index.md
 
       - name: Update Compose Stacks
         if: ${{ github.event.inputs.compose == 'true' }}
         run: |
           rm content/Compose/index.md
           cp templates/compose.md content/Compose/index.md
-          cat PS-Commands/Docker-Compose/README.md | sed -Ez "s/(.*\n)?---\n//" >> content/Compose/index.md
+          cat rudocs/Docker-Compose/README.md | sed -Ez "s/(.*\n)?---\n//" >> content/Compose/index.md
 
       - name: Update GoLang Cheat Sheet
         if: ${{ github.event.inputs.golang == 'true' }}
