--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-title = "PowerShell Commands"
+title = "ruDocs"
 base_url = "https://lifailon.github.io"
-description = "Web version for PowerShell notes in Russian language (Сheat Sheet & Documentation), Linux commands and RuDocs for Node.js"
+description = "Web version for PowerShell notes, Linux commands, DevOps tools, Go and Node.js syntax in ru language."
 
 compile_sass = true
 minify_html = true
@@ -30,8 +30,8 @@ bottom_footnotes = true
 index_format = "fuse_json"
 
 # [languages.ru]
-# title = "PowerShell Commands"
-# description = "Веб версия заметок PowerShell на русском языке."
+# title = "ruDocs"
+# description = "Веб-версия заметок по PowerShell, командам Linux, инструментам DevOps, синтаксису Go и Node.js на русском языке."
 # generate_feeds = true
 # taxonomies = [{ name = "tags", feed = true }]
 
@@ -50,8 +50,8 @@ styles = [
 # favicon = "/docs/Logo/PowerShell-Logo.png"
 # logo = "/docs/Logo/PowerShell-Logo.png"
 
-source_url = "https://github.com/Lifailon/PS-Commands"
-issues_url = "https://github.com/Lifailon/PS-Commands/issues"
+source_url = "https://github.com/Lifailon/rudocs"
+issues_url = "https://github.com/Lifailon/rudocs/issues"
 
 show_copy_button = true
 show_reading_time = true
@@ -96,13 +96,13 @@ links = [
   { url = "@/Node-js/index.md", name = "Node.js" },
 ]
 
-copyright = "**2023-2025** © *Lifailon*"
+copyright = "**2023-2026** © *Lifailon*"
 show_copyright = true
 show_source = false
 show_powered_by = true
 socials = [
-	{ url = "https://github.com/lifailon/PS-Commands", name = "GitHub", icon = "%3Csvg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3EGitHub%3C/title%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E" },
+	{ url = "https://github.com/lifailon/rudocs", name = "GitHub", icon = "%3Csvg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3EGitHub%3C/title%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E" },
+	{ url = "https://hub.docker.com/u/lifailon", name = "Docker Hub", icon = "%3Csvg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3EDocker%3C/title%3E%3Cpath d='M22.149 10.74c-.111-.086-1.15-.86-3.3-.86-.26.002-.52.017-.78.045-.24-1.35-1.32-1.8-1.35-1.81l-.45-.17-.3.42c-.17.24-.65.88-.65 1.76.001.29.04.58.12.86-.66.19-1.3.35-1.95.48a9.72 9.72 0 0 1-1.95.22H.75c-.41 0-.75.34-.75.75 0 4.42 2.4 5.98 4.41 6.68.9.28 1.91.42 3.01.42 1.08 0 2.11-.14 3.01-.42 1.98-.61 3.51-2.01 4.14-4.01.34.04.68.07 1.02.07 1.35 0 2.61-.35 3.72-1.04 1.64-1.01 1.87-2.23 1.87-2.92.01-.96-.34-1.68-.35-1.7zM6.75 8.22h2.25c.14 0 .25-.11.25-.25V6.47c0-.14-.11-.25-.25-.25H6.75c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25zM12 8.22h2.25c.14 0 .25-.11.25-.25V6.47c0-.14-.11-.25-.25-.25H12c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25zM9.375 6.72h-2.25c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25h2.25c.14 0 .25-.11.25-.25v-1.5c0-.14-.11-.25-.25-.25zM12 5.47h-2.25c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25H12c.14 0 .25-.11.25-.25v-1.5c0-.14-.11-.25-.25-.25z'/%3E%3C/svg%3E" },
 	{ url = "https://www.nuget.org/profiles/Lifailon", name = "NuGet", icon = "%3Csvg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3ENUGet%3C/title%3E%3Cpath d='M1.57 0A1.57 1.57 0 000 1.57v20.86A1.57 1.57 0 001.57 24h20.86A1.57 1.57 0 0024 22.43V1.57A1.57 1.57 0 0022.43 0zM7.5 1.5A2.5 2.5 0 0110 4a2.5 2.5 0 01-2.5 2.5A2.5 2.5 0 015 4a2.5 2.5 0 012.5-2.5zM12 6h9v12h-1.5a3.76 3.76 0 00-2.81-1.25A3.76 3.76 0 0012.5 20a3.76 3.76 0 002.19 3.25A3.76 3.76 0 0018.5 24H21V6z'/%3E%3C/svg%3E" },
 	{ url = "https://www.npmjs.com/~lifailon", name = "NPM", icon = "%3Csvg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3ENPM%3C/title%3E%3Cpath d='M0 0v24h24V0zm14.74 14.74h-3.66v-5.5h-1.83v5.5H5.5V5.5h9.24z'/%3E%3C/svg%3E" },
-	{ url = "https://hub.docker.com/u/lifailon", name = "Docker Hub", icon = "%3Csvg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3EDocker%3C/title%3E%3Cpath d='M22.149 10.74c-.111-.086-1.15-.86-3.3-.86-.26.002-.52.017-.78.045-.24-1.35-1.32-1.8-1.35-1.81l-.45-.17-.3.42c-.17.24-.65.88-.65 1.76.001.29.04.58.12.86-.66.19-1.3.35-1.95.48a9.72 9.72 0 0 1-1.95.22H.75c-.41 0-.75.34-.75.75 0 4.42 2.4 5.98 4.41 6.68.9.28 1.91.42 3.01.42 1.08 0 2.11-.14 3.01-.42 1.98-.61 3.51-2.01 4.14-4.01.34.04.68.07 1.02.07 1.35 0 2.61-.35 3.72-1.04 1.64-1.01 1.87-2.23 1.87-2.92.01-.96-.34-1.68-.35-1.7zM6.75 8.22h2.25c.14 0 .25-.11.25-.25V6.47c0-.14-.11-.25-.25-.25H6.75c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25zM12 8.22h2.25c.14 0 .25-.11.25-.25V6.47c0-.14-.11-.25-.25-.25H12c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25zM9.375 6.72h-2.25c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25h2.25c.14 0 .25-.11.25-.25v-1.5c0-.14-.11-.25-.25-.25zM12 5.47h-2.25c-.14 0-.25.11-.25.25v1.5c0 .14.11.25.25.25H12c.14 0 .25-.11.25-.25v-1.5c0-.14-.11-.25-.25-.25z'/%3E%3C/svg%3E" },
 ]
